scroll global Updates created

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <h1 id="title">Covid-19<br>worldwide Data</h1>
     <i id="downArow" class="fas fa-chevron-circle-down" onclick="showSiteData()"></i>
   </header>
-  <div id="countries">
-  </div>
+  <div id="countries"></div>
+  <footer id="footer"></footer>
   <script src="index.js"></script>
 </body>
 
